upload new index.html and img

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 			text-align: center;
 		}
 		h1 {
-			font-size: 26px;
+			font-size: 36px;
 			text-align: center;
 		}
 		p {
-			font-size: 20px;
+			font-size: 26px;
 		}
 		a {
-			font-size: 20px;
+			font-size: 26px;
 		}
 	</style>
 
@@ -50,7 +50,13 @@
 			<img src="img/create-repo.jpg">
 			<img src="img/repo-on-github.jpg">
 			<img src="img/push-repo.jpg">
+		</li>
+		<li>
 			
+				<p>Create & configure first repository from Github</p>
+				<a href="https://artemchepeliuk.github.io/git-homehork-github/">
+					<p>Click here to see</p>
+				</a>
 		</li>
 	</ul>
 
