added new lines of code and img

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 		a {
 			font-size: 26px;
 		}
+		li {
+			border: 1px solid grey;
+			padding: 15px;
+			list-style: none;
+		}
+		img {
+			margin: 5px;
+		}
 	</style>
 
 </head>
@@ -57,6 +65,25 @@
 				<a href="https://artemchepeliuk.github.io/git-homehork-github/">
 					<p>Click here to see</p>
 				</a>
+		</li>
+
+		<li>
+			<p>Make Fork & PR of repository from anyone else from group.</p>
+			
+		
+			<p>Fork</p>
+			<a href="https://github.com/ArtemChepeliuk/Simple-cross-browser-code">link</a> <br>
+			<img src="img/fork-from-TarjaLorem.jpg">
+			<p>Pull request</p>
+			<a href="https://github.com/TarjaLorem/Simple-cross-browser-code/pull/1"></a>
+			<img src="img/add-file-in-TarjaLorem-repo.jpg">
+			<img src="img/comparing-changes-TarjaLorem-repo.jpg">
+			<img src="img/pull-req-TarjaLorem-repo.jpg">
+		</li>
+
+		<li>
+			<p>Create Github Pages from any of your repository</p>
+			<a href="https://artemchepeliuk.github.io/git-homework/">link</a>
 		</li>
 	</ul>
 
