added new lines of code and img2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			list-style: none;
 		}
 		img {
-			margin: 5px;
+			margin: 15px;
 		}
 	</style>
 
@@ -73,9 +73,10 @@
 		
 			<p>Fork</p>
 			<a href="https://github.com/ArtemChepeliuk/Simple-cross-browser-code">link</a> <br>
-			<img src="img/fork-from-TarjaLorem.jpg">
+			<img src="img/fork-from-TarjaLorem.jpg"> <br>
 			<p>Pull request</p>
-			<a href="https://github.com/TarjaLorem/Simple-cross-browser-code/pull/1"></a>
+			<a href="https://github.com/TarjaLorem/Simple-cross-browser-code/pull/1">link</a>
+			<br>
 			<img src="img/add-file-in-TarjaLorem-repo.jpg">
 			<img src="img/comparing-changes-TarjaLorem-repo.jpg">
 			<img src="img/pull-req-TarjaLorem-repo.jpg">
@@ -84,6 +85,15 @@
 		<li>
 			<p>Create Github Pages from any of your repository</p>
 			<a href="https://artemchepeliuk.github.io/git-homework/">link</a>
+		</li>
+		<li>
+			<p>Play https://try.github.io/</p>
+			<img src="img/notes.jpg" width="800" height="800">
+		</li>
+
+		<li>
+			<p>Fork, push changes for Fork, and Create PR for github.com/cursor-education/welcome-to-github.</p>
+			<a href="https://github.com/cursor-education/welcome-to-github/pull/337"> link PR</a>
 		</li>
 	</ul>
 
