--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		</li>
 		<li>
 			<p>Play https://try.github.io/</p>
-			<img src="img/notes.jpg" width="800" height="800">
+			<img src="img/notes.JPG" width="800" height="800">
 		</li>
 
 		<li>
