added JS and style

--- a/index.html
+++ b/index.html
@@ -3,45 +3,23 @@
 <head>
 	<title>git homework</title>
 	<meta charset="utf-8">
-
-
-	<style type="text/css">
-		body {
-			background-color: #f0f8ff; 
-			font-family: verdana;
-			text-align: center;
-		}
-		h1 {
-			font-size: 36px;
-			text-align: center;
-		}
-		p {
-			font-size: 26px;
-		}
-		a {
-			font-size: 26px;
-		}
-		li {
-			border: 1px solid grey;
-			padding: 15px;
-			list-style: none;
-		}
-		img {
-			margin: 15px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="style/style.css">
+	<SCRIPT type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></SCRIPT>
+	<script type="text/javascript" src="js/popup_img.js"></script>
+		
 
 </head>
 <body>
 	<h1>Git homework by Artem Chepeliuk</h1>
 	<ul>
 		<li>
+			Click image for a larger view
 		 <p>Set up Git (and configure) on your local machine.</p>
-		 <img src="img/screenshot-of-console.jpg">
+		 <img src="img/screenshot-of-console.jpg" class="image">
 		</li>
 		<li> 
 			<p> Github profile review</p>
-			<img src="img/github-profile.jpg"> <br>
+			<img src="img/github-profile.jpg" class="image"> <br>
 			<a href="https://github.com/ArtemChepeliuk">Artem Chepeliuk on Github</a> <br>
 
 			<p>Мій профіль хороший як для початківця, я заповнив основну інформацію про себе, правда не зрозумів як вказати свій email. :) <br>
@@ -51,13 +29,13 @@
 			<p>
 			Create & configure first repository from console. Push few files
 			</p>
-			<img src="img/create-git-rep.jpg">
-			<img src="img/create-index.jpg">
-			<img src="img/add-index-and-screen.jpg">
-			<img src="img/first-commit.jpg">
-			<img src="img/create-repo.jpg">
-			<img src="img/repo-on-github.jpg">
-			<img src="img/push-repo.jpg">
+			<img src="img/create-git-rep.jpg" class="image">
+			<img src="img/create-index.jpg" class="image">
+			<img src="img/add-index-and-screen.jpg" class="image">
+			<img src="img/first-commit.jpg" class="image">
+			<img src="img/create-repo.jpg" class="image">
+			<img src="img/repo-on-github.jpg" class="image">
+			<img src="img/push-repo.jpg" class="image">
 		</li>
 		<li>
 			
@@ -73,13 +51,13 @@
 		
 			<p>Fork</p>
 			<a href="https://github.com/ArtemChepeliuk/Simple-cross-browser-code">link</a> <br>
-			<img src="img/fork-from-TarjaLorem.jpg"> <br>
+			<img src="img/fork-from-TarjaLorem.jpg" class="image"> <br>
 			<p>Pull request</p>
 			<a href="https://github.com/TarjaLorem/Simple-cross-browser-code/pull/1">link</a>
 			<br>
-			<img src="img/add-file-in-TarjaLorem-repo.jpg">
-			<img src="img/comparing-changes-TarjaLorem-repo.jpg">
-			<img src="img/pull-req-TarjaLorem-repo.jpg">
+			<img src="img/add-file-in-TarjaLorem-repo.jpg" class="image">
+			<img src="img/comparing-changes-TarjaLorem-repo.jpg" class="image">
+			<img src="img/pull-req-TarjaLorem-repo.jpg" class="image">
 		</li>
 
 		<li>
@@ -88,7 +66,7 @@
 		</li>
 		<li>
 			<p>Play https://try.github.io/</p>
-			<img src="img/notes.jpg" width="800" height="800">
+			<img src="img/notes.JPG" class="image">
 		</li>
 
 		<li>
