--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		<li>
 			Click image for a larger view
 		 <p>Set up Git (and configure) on your local machine.</p>
-		 <img src="img/screenshot-of-console.jpg" class="image">
+		 <img src="img/screenshot-of-console.jpg" class="image"> <br>
+		 <img src="img/git-config.jpg" class="image">
 		</li>
 		<li> 
 			<p> Github profile review</p>
@@ -29,6 +30,7 @@
 			<p>
 			Create & configure first repository from console. Push few files
 			</p>
+			<img src="img/git-init.jpg" class="image">
 			<img src="img/create-git-rep.jpg" class="image">
 			<img src="img/create-index.jpg" class="image">
 			<img src="img/add-index-and-screen.jpg" class="image">
