fixed screen profile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<img src="img/github-profile.jpg" class="image"> <br>
 			<a href="https://github.com/ArtemChepeliuk">Artem Chepeliuk on Github</a> <br>
 
-			<p>Мій профіль хороший як для початківця, я заповнив основну інформацію про себе, правда не зрозумів як вказати свій email. :) <br>
+			<p>Мій профіль хороший як для початківця, я заповнив основну інформацію про себе, вказав свій email. :) <br>
 			Щоб покращити свiй профіль мені потрібно активно ним займатися, оновлювати інформацію, і додавати проекти над якимми я буду в подальшому працювати.</p>
 		</li>
 		<li>
